tests/baselines/reference/binaryArithmatic4.errors.txt
tests/cases/compiler/binaryArithmatic4.ts(1,9): error TS18049: The value 'null' cannot be used here.
tests/cases/compiler/binaryArithmatic4.ts(1,16): error TS18049: The value 'null' cannot be used here.


==== tests/cases/compiler/binaryArithmatic4.ts (2 errors) ====
    var v = null | null;
            ~~~~
!!! error TS18049: The value 'null' cannot be used here.
                   ~~~~
!!! error TS18049: The value 'null' cannot be used here.